test/files/neg/t6217.scala
package a
// to avoid redefinition of the root package, _root_ will become a reserved identifier
package _root_

// also not allowed, you sneaky bug-ger!
package b._root_.c